--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
+    <queries>
+        <intent>
+            <action android:name="android.speech.RecognitionService" />
+        </intent>
+    </queries>
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -23,11 +29,14 @@
         android:theme="@style/Theme.RippleSearch"
         tools:targetApi="31">
         <activity
+            android:name=".MicActivity"
+            android:theme="@style/CustomBottomSheetDialogTheme"
+            android:exported="false" >
+        </activity>
+        <activity
             android:name=".SearchActivity"
             android:exported="true"
-            >
-
-        </activity>
+            android:launchMode="singleInstance"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
